docs/versioned_docs/version-1.9.0/Deployment/deployment-gcp.mdx
---
title: Deploy idrflow on Google Cloud Platform
slug: /deployment-gcp
---

This guide demonstrates how to deploy idrflow on [Google Cloud Platform](https://console.cloud.google.com/) with a Cloud Shell script that walks through the process of setting up a Debian-based VM with the idrflow package, Nginx, and the necessary configurations to run the idrflow development environment in GCP.

To use this script, you need a Google Cloud project with the necessary permissions to create resources.

1. Clone or fork the upstream Langflow repository into a workspace you control.

2. Open Google Cloud Shell, change to `scripts/gcp`, and run the walkthrough from your own repository copy.

   The upstream one-click launcher is intentionally omitted from the idrflow docs until an idrflow-owned deployment source is published.

3. Follow the tutorial to deploy idrflow.

:::info
This deployment uses a [spot (preemptible) instance](https://cloud.google.com/compute/docs/instances/preemptible) as a cost-effective option to demonstrate how to deploy idrflow on GCP.
However, due to the nature of spot instances, the VM can be terminated at any time if Google Cloud needs to reclaim the resources.

For a more stable deployment, consider using a regular VM instance instead of a spot instance.

For more information, see the [GCP pricing calculator](https://cloud.google.com/products/calculator?hl=en).
:::